Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-4405

QmlObserver don't shows breakpoints in debugging if the project is symlinked.

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • Qt Creator 2.3.0
    • Qt Creator 2.2.0-beta
    • Debugger
    • 9a8cf34e6320eb4f9c06a7301d75262159b18a6e

    Description

      1. create a qml project
      2. create a symlink on this project
      3. open the symlinked project.
      4. set a breakpoint
      5. begin debugging.

      -> the file path of the project where you set the breakpoint is with the symlink
      the file path of the project where the debugger stopped is the resolved symlink

      Attachments

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              cjanssen Christiaan Janssen (Inactive)
              bubke Marco Bubke
              Votes:
              0 Vote for this issue
              Watchers:
              0 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes