QmlDebugger: breakpoints in symlinked qmlprojects

Task-number: QTCREATORBUG-4405

Reviewed-by: Kai Koehne